<resources>
    <string name="app_name">GitPocket</string>
    <string name="github_username">Github username</string>
    <string name="results">Results of</string>
    <string name="user_avatar">User avatar</string>
    <string name="search_github_user">Search github user</string>
    <string name="location">Location</string>
    <string name="social_media_and_article">Social Media and Article</string>
    <string name="location_mark">location mark</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="repositories_and_popularity">Repositories and Popularity</string>
    <string name="bio">Bio</string>
    <string name="load_more">Load more</string>
    <string name="page">Page</string>
    <string name="visit_repository">Visit repository</string>
    <string name="loading">Loading</string>
</resources>